--- a/style.css
+++ b/style.css
@@ -3,19 +3,26 @@ html,body{
 	background-image:url("gfx/bg2.png");
   background-color: #51b7bc;
 	background-size:100% 100%;
-background-repeat: space;
+
 	background-size: cover;
 
 	font-family: Verdana;
 	color: white;
 	font-size: 13.5px;
+  cursor: url("gfx/cursor/cursor-base.png"),auto;
 }
+.a{
+ /*provide link cursors here*/
+
+}
+
 .wrapper{
 	position: relative;
 	margin: 0 auto;
 	padding: 1%;
 	width: 900px;
 	height: 100%;
+  /*cursor: url("gfx/cursor/cursor-loader.gif"),auto;*/
 
 }
 
@@ -35,6 +42,7 @@ background-repeat: space;
 	border-top:1px #62c7cd solid;
 
 	border-bottom: 2px #62c7cd solid;
+  cursor: url("gfx/cursor/cursor-base-active.png"),auto;
 }
 
 
@@ -46,6 +54,8 @@ background-repeat: space;
 	background-image:url("gfx/streak2.png");
 	background-repeat: space;
 	background-size: cover;
+
+
 }
 
 .topbar-navbar{
@@ -61,9 +71,10 @@ background-repeat: space;
 	overflow: hidden;
 	background:blue;
 	background-color: black;
-	margin: 5% 0px;
+	/*margin: 5% 0px;*/
 
     overflow: hidden;
+
   background:linear-gradient();
   padding-top: 1%; 
   
@@ -198,6 +209,7 @@ width: 23.33%;
   border-bottom: 6px /*#0290a8*/white solid;
   background:linear-gradient(15deg, white,#7ce0e6,#7ce0e6);
   text-shadow: #000000 1px 0 10px;
+  cursor: url("gfx/cursor/cursor-link.png"),auto;
 }
 #nav-list{
 
@@ -217,6 +229,7 @@ width: 23.33%;
   padding-top: 10%;
   padding-bottom: 10%;
   padding-left: 2%;
+  cursor: url("gfx/cursor/cursor-link.png"),auto;
 }
 #nav-list:hover{
   background:linear-gradient(15deg, white,#7ce0e6,#7ce0e6);
@@ -281,6 +294,8 @@ width: 23.33%;
 .mask {
   overflow: hidden;
   height: 100%;
+  cursor: url("gfx/cursor/cursor-base-active.png"),auto;
+
 }
 
 .slider ul {
@@ -539,6 +554,7 @@ width: 23.33%;
 	padding: 5%;
 	background:linear-gradient(45deg,#288f94,#54b9bf,#97e7eb);
 	text-align: center;
+  cursor: url("gfx/cursor/cursor-link.png"),auto;
 }
 #carousel-descriptor-linktext{
 	text-decoration: none;
@@ -547,5 +563,76 @@ width: 23.33%;
 }
 #carousel-descriptor-linkbutton:hover{
 	background:linear-gradient(15deg, white,#7ce0e6,#7ce0e6);
+}
 
+/* Custom scrollbar styles for the entire document */
+html::-webkit-scrollbar {
+    width: 21px;
+}
+
+html::-webkit-scrollbar-track {
+    background: url('gfx/scrollbar/1/scrollbar-scrollback.png') no-repeat center center;
+    background-size: 21px 3000px;
+}
+
+html::-webkit-scrollbar-thumb {
+    background: url('gfx/scrollbar/1/scrollbar-scrollhandle-default.png') no-repeat center center;
+    background-size: cover;
+    border-radius: 15px;
+}
+
+html::-webkit-scrollbar-button:vertical:decrement {
+    background: url('gfx/scrollbar/1/scrollbar-up.png') no-repeat center top;
+    background-size: cover;
+    height: 16px;
+}
+
+html::-webkit-scrollbar-button:vertical:increment {
+    background: url('gfx/scrollbar/1/scrollbar-down.png') no-repeat center bottom;
+    background-size: cover;
+    height: 16px;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+    background: url('gfx/scrollbar/1/scrollbar-scrollhandle-active.png') no-repeat center center;
+    background-size: cover;
+}
+
+::-moz-selection { /* Code for Firefox */
+  color: white;
+  background: #a7eaee;
+}
+
+::selection {
+  color: white;
+  background: #a7eaee;
+}
+
+#marquee{
+  color:black;
+}
+#marquee-cont {
+  background: #f4f4f4;
+
+}
+#marquee-cont marquee {
+  margin-top: 5px;
+}
+#marquee-news {
+  
+  background: #1174A8;
+  padding: 5px;
+}
+
+
+#ticker-title{
+  border:none;
+  width: 220px;
+  padding:5px 40px;
+  background:#1174A8;
+  background:linear-gradient(45deg,#288f94,#54b9bf,#97e7eb);
+  color:white;
+}
+#ticker-title:focus{
+  outline:none;
 }
