--- a/templates/sidenavblock.html
+++ b/templates/sidenavblock.html
@@ -36,7 +36,7 @@
       			<div id = "article-clump-cascade" style="text-align: center;">
       				<a style="font-size: 12px;">Useful websites on the information super-highway</a>
 					<br><br>
-					<a href="/xsh/_01/infosoosage.html"><img id = "topsites-minipromo-img" src = "/gfx/mini-promos/infosausage.png"></a>
+					<a href="/xsh/infosoosage/infosoosage.html"><img id = "topsites-minipromo-img" src = "/gfx/mini-promos/infosausage.png"></a>
 					<br><br>
 					<a href="#"><img id = "topsites-minipromo-img" src = "/gfx/mini-promos/infosausage.png"></a>
 					<br><br>
