--- a/templates/footerblock.html
+++ b/templates/footerblock.html
@@ -8,13 +8,16 @@
 			<li id="nav-list" style="background:none;" href="#">Contact NMCM</li>
 			<li id="nav-list" style="background:none;border-top: none;" href="#">GameJolt DMs</li>
 			<li id="nav-list" style="background:none;border-top: none;" href="#">Discord: nmcmmain</li>
+			
 
 		</ul>
 		<ul style="float:right; list-style: none;">
 			<li id="nav-list" style="background:none;" href="#">NMCM</li>
 			
 			<li id="nav-list" style="background:none;" href="#">May 2024</li>
+			<li id="nav-list" style="background:none;border-top: none;"><img src="/gfx/review-ico.png" style="width: 70%;"></li>
 		</ul>
+
 
 
 		<ul style="float:right;list-style: none;">
