--- a/templates/sidenavblock.html
+++ b/templates/sidenavblock.html
@@ -36,21 +36,12 @@
       			<div id = "article-clump-cascade" style="text-align: center;">
       				<a style="font-size: 12px;">Useful websites on the information super-highway</a>
 					<br><br>
-					<a href="/xsh/infosoosage/infosoosage.html"><img id = "topsites-minipromo-img" src = "/gfx/mini-promos/infosausage.png"></a>
+					<a href="/xsh/infosoosage/infosoosage.html" id = "topsites-minipromo-wrapper"><img id = "topsites-minipromo-img" src = "/gfx/mini-promos/infosausage.gif"></a>
 					<br><br>
-					<a href="#"><img id = "topsites-minipromo-img" src = "/gfx/mini-promos/infosausage.png"></a>
+					<a href="#" id = "topsites-minipromo-wrapper"><img id = "topsites-minipromo-img" src = "/gfx/mini-promos/vibetrybe.gif"></a>
 					<br><br>
-					<a href="#"><img id = "topsites-minipromo-img" src = "/gfx/mini-promos/infosausage.png"></a>
+					<a href="#" id = "topsites-minipromo-wrapper"><img id = "topsites-minipromo-img" src = "/gfx/mini-promos/buzzpulse.gif"></a>
 					<br><br>
-
-
-					<ul style=" list-style-type: none; margin-left: 0px;">
-						<li></li>
-						<li>VibeTribe</li>
-						<li>BuzzPulse Teen Forums</li>
-						
-
-					</ul>
 				</div>
       		</div>
 
