--- a/xsh/infosoosage/templates/topbarblock.html
+++ b/xsh/infosoosage/templates/topbarblock.html
@@ -10,6 +10,8 @@
 			</form>
 			<desc2>><u>Tip:</u> Check your spelling? Good spelling means better searches.<br>><u>Tip:</u>The more specific, the better.</desc2>
 			<img class="poweredby-img"src="res/icons/poweredby.png">
+			<img style="max-width: 40px;max-height: 40px;margin-left: -40px;" src="res/icons/searching.png">
+
 		</div>
 	</div>
 		<div class="topbar-topmenu">
