--- a/xsh/infosoosage/style.css
+++ b/xsh/infosoosage/style.css
@@ -364,6 +364,8 @@ html::-webkit-scrollbar-thumb:hover {
 .tabcontent {
   display: none;
   padding: 6px 12px;
+  padding-top: 128px;
   border: 1px solid #ccc;
   border-top: none;
+
 }
